@@ -59,10 +59,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19</version>
+                <version>3.0.0-M1</version>
                 <configuration>
                     <!--once就表示单线程挨个执行Junit test-->
-                    <forkMode>once</forkMode>
+<!--                    <forkMode>once</forkMode>-->
+                    <forkCount>1</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                     <excludes>
                         <exclude>com/dtstack/engine/master/temp/*.java</exclude>
                         <exclude>**/Abstract*.java</exclude>
